--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,18 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 /* pseudo class style elements under special conditions*/
 .btn:link,
 .btn:visited {
@@ -128,6 +140,7 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all .2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -145,4 +158,34 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+/* pseudo element */
+.btn::after {
+  /* needs to be specified */
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  /* position absolute is wrt to the first positiom relative element */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
