--- a/css/style.css
+++ b/css/style.css
@@ -44,19 +44,19 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   /* we start TRBL counting from the parent if it has position relative*/
   top: 4rem;
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem;
 }
 
 /* central position a div */
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -71,7 +71,7 @@ body {
   margin-bottom: 5rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   /* block elements take all available width and insert line breaks */
   display: block;
   font-size: 5rem;
@@ -87,7 +87,7 @@ body {
   */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -164,7 +164,7 @@ body {
 
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -185,7 +185,7 @@ body {
   transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -194,7 +194,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out .75s;
   animation-fill-mode: backwards;
 }
