Install and compile SASS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,43 +6,60 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+$color-primary: #55c57a;
+$color-primary-dark: #28b485;
+$color-primary-light: #7ed56f;
+
+$color-grey-dark: #777;
+
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   /* set size to 10px, technique widely used in the css community */
-  font-size: 62.5%; }
+  font-size: 62.5%; 
+}
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: #777;
+  color: $color-grey-dark;
   padding: 3rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .header {
   /* at every point the height should be 95 % of the viewport height */
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.803), rgba(40, 180, 133, 0.803)), url(../img/hero-small.jpg);
+  height: 95vh; 
+  background-image: linear-gradient(
+    to right bottom,
+   rgba($color-primary-light, 0.803),
+   rgba($color-primary-dark, 0.803)),
+    url(../img/hero-small.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
+  position: relative;
+}
 
 .header__logo-box {
   position: absolute;
   /* we start TRBL counting from the parent if it has position relative*/
   top: 4rem;
-  left: 4rem; }
+  left: 4rem;
+}
 
 .header__logo {
-  height: 3.5rem; }
+  height: 3.5rem;
+}
 
 /* central position a div */
 .header__text-box {
@@ -50,13 +67,15 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
+  text-align: center;
+}
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 5rem; }
+  margin-bottom: 5rem;
+}
 
 .heading-primary--main {
   /* block elements take all available width and insert line breaks */
@@ -64,48 +83,67 @@ body {
   font-size: 5rem;
   font-weight: 400;
   letter-spacing: 3.5rem;
+
   animation-name: moveInRight;
   animation-duration: 1s;
   animation-timing-function: ease-out;
   /*
     animation-delay: 3s;
     animation-iteration-count: 3;  
-  */ }
+  */
+}
 
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1.75rem;
-  animation: moveInRight 1s ease-in; }
+  animation: moveInRight 1s ease-in;
+}
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem); }
+    transform: translateX(-10rem);
+  }
+
   80% {
-    transform: translate(1rem); }
+    transform: translate(1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translate(0);
+  }
+}
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem); }
+    transform: translateX(10rem);
+  }
+
   80% {
-    transform: translate(-1rem); }
+    transform: translate(-1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translate(0);
+  }
+}
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(2rem); }
+    transform: translateY(2rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateY(0rem); } }
+    transform: translateY(0rem);
+  }
+}
 
 /* pseudo class style elements under special conditions*/
 .btn:link,
@@ -117,20 +155,25 @@ body {
   border-radius: 10rem;
   transition: all .2s;
   position: relative;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+}
 
 .btn:hover {
   transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+}
 
 .btn:active {
-  transform: translateY(-0.1rem);
+  transform: translateY(-.1rem);
   /* make the shadow smaller after the click */
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
+
+}
 
 .btn--white {
   background-color: #fff;
-  color: #777; }
+  color: $color-grey-dark;
+}
 
 /* pseudo element */
 .btn::after {
@@ -145,15 +188,19 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all .4s; }
+  transition: all .4s;
+}
 
 .btn--white::after {
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn--animated {
   animation: moveInBottom 0.5s ease-out .75s;
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
