--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@ $color-primary-dark: #28b485;
 $color-primary-light: #7ed56f;
 
 $color-grey-dark: #777;
+$color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -48,26 +50,26 @@ body {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
-}
 
-.header__logo-box {
-  position: absolute;
-  /* we start TRBL counting from the parent if it has position relative*/
-  top: 4rem;
-  left: 4rem;
-}
+  &__logo-box {
+    position: absolute;
+    /* we start TRBL counting from the parent if it has position relative*/
+    top: 4rem;
+    left: 4rem;
+  }
 
-.header__logo {
-  height: 3.5rem;
-}
-
-/* central position a div */
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  &__logo {
+    height: 3.5rem;
+  }
+  
+  /* central position a div */
+  &__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
 }
 
 .heading-primary {
@@ -75,30 +77,30 @@ body {
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 5rem;
-}
 
-.heading-primary--main {
-  /* block elements take all available width and insert line breaks */
-  display: block;
-  font-size: 5rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
+  &--main {
+    /* block elements take all available width and insert line breaks */
+    display: block;
+    font-size: 5rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
 
-  animation-name: moveInRight;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  /*
-    animation-delay: 3s;
-    animation-iteration-count: 3;  
-  */
-}
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.75rem;
-  animation: moveInRight 1s ease-in;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    /*
+      animation-delay: 3s;
+      animation-iteration-count: 3;  
+    */
+  }
+  
+  &--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+    animation: moveInRight 1s ease-in;
+  }
 }
 
 @keyframes moveInLeft {
@@ -146,61 +148,63 @@ body {
 }
 
 /* pseudo class style elements under special conditions*/
-.btn:link,
-.btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 10rem;
-  transition: all .2s;
-  position: relative;
-  font-size: 1.6rem;
-}
+.btn {
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all .2s;
+    position: relative;
+    font-size: 1.6rem;
+  }
+  
+  &:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
-.btn:hover {
-  transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-}
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
+  
+  &:active {
+    transform: translateY(-.1rem);
+    /* make the shadow smaller after the click */
+    box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
+  
+  }
+  
+  &--white {
+    background-color: $color-white;
+    color: $color-grey-dark;
 
-.btn:active {
-  transform: translateY(-.1rem);
-  /* make the shadow smaller after the click */
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
+    &::after {
+      background-color: $color-white;
+    }
+  }
+  
+  /* pseudo element */
+  &::after {
+    /* needs to be specified */
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    /* position absolute is wrt to the first position relative element */
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+  }
 
-}
-
-.btn--white {
-  background-color: #fff;
-  color: $color-grey-dark;
-}
-
-/* pseudo element */
-.btn::after {
-  /* needs to be specified */
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
-  /* position absolute is wrt to the first positiom relative element */
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all .4s;
-}
-
-.btn--white::after {
-  background-color: #fff;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.btn--animated {
-  animation: moveInBottom 0.5s ease-out .75s;
-  animation-fill-mode: backwards;
+  &--animated {
+    animation: moveInBottom 0.5s ease-out .75s;
+    animation-fill-mode: backwards;
+  }
 }
