--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,210 +1,14 @@
-/*
-COLORS:
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-*/
+@import "components/button";
+@import "layout/header";
 
-$color-primary: #55c57a;
-$color-primary-dark: #28b485;
-$color-primary-light: #7ed56f;
+@import "pages/home";
 
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  /* set size to 10px, technique widely used in the css community */
-  font-size: 62.5%; 
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  line-height: 1.7;
-  color: $color-grey-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-
-.header {
-  /* at every point the height should be 95 % of the viewport height */
-  height: 95vh; 
-  background-image: linear-gradient(
-    to right bottom,
-   rgba($color-primary-light, 0.803),
-   rgba($color-primary-dark, 0.803)),
-    url(../img/hero-small.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative;
-
-  &__logo-box {
-    position: absolute;
-    /* we start TRBL counting from the parent if it has position relative*/
-    top: 4rem;
-    left: 4rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-  }
-  
-  /* central position a div */
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 5rem;
-
-  &--main {
-    /* block elements take all available width and insert line breaks */
-    display: block;
-    font-size: 5rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-    /*
-      animation-delay: 3s;
-      animation-iteration-count: 3;  
-    */
-  }
-  
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    animation: moveInRight 1s ease-in;
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translate(1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translate(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(2rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0rem);
-  }
-}
-
-/* pseudo class style elements under special conditions*/
-.btn {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s;
-    position: relative;
-    font-size: 1.6rem;
-  }
-  
-  &:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba($color-black, .2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-  
-  &:active {
-    transform: translateY(-.1rem);
-    /* make the shadow smaller after the click */
-    box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
-  
-  }
-  
-  &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-  
-  /* pseudo element */
-  &::after {
-    /* needs to be specified */
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    /* position absolute is wrt to the first position relative element */
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-  }
-
-  &--animated {
-    animation: moveInBottom 0.5s ease-out .75s;
-    animation-fill-mode: backwards;
-  }
-}
