--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,13 @@ $color-primary: #55c57a;
 $color-primary-dark: #28b485;
 $color-primary-light: #7ed56f;
 
+$color-secondary-light: #fff730;
+$color-secondary-dark: #ffb900;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+
 $color-grey-light-1: #f7f7f7;
 
 $color-grey-dark: #777;
