--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -37,6 +37,15 @@
       background-color: $color-white;
     }
   }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
   
   /* pseudo element */
   &::after {
