--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,16 +6,50 @@
   left: 0;
   background-color: rgba($color-black, .8);
   z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all .2s;
+      line-height: 1;
+    }
+
+    :hover {
+      color: $color-primary;
+    }
+  }
 
   &__content {
    @include absCenter;
     background-color: $color-white;
-    height: 75%;
     width: 75%;
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(.25);
+    transition: all .4s .2s;
   }
 
   &__left {
