--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/*
+  0 - 600px; Phone
+  600 - 900px; Tablet portrait
+  900 - 1200px; Tablet landscape
+  1200 - 1800; is where our normal styles apply
+  1800px + : Big desktop
+
+  $breakpoint argument choices:
+  - phone 
+  - tab-port
+  - tab-land
+  - big-desktop
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -36,6 +49,12 @@
 html {
   /* set size to 10px, technique widely used in the css community */
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box; }
