--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,7 +8,11 @@
 }
 
 .u-margin-bottom-medium { 
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .u-margin-bottom-small { 
@@ -16,7 +20,11 @@
 }
 
 .u-margin-top-big { 
-  margin-top: 8rem;
+  margin-top: 8rem !important;
+
+  @include respond(tab-port) {
+    margin-top: 5rem !important;
+  }
 }
 
 .u-margin-top-huge { 
