--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   transition: transform .3s;
 
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
   &__icon {
     background-image: linear-gradient(
       to right,
@@ -16,6 +20,10 @@
     -webkit-background-clip: text;
     color: transparent;
     font-size: 6rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover {
