--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -51,6 +51,10 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &__radio-input {
