--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,7 +17,7 @@
     // dotsperinch
     background-image: linear-gradient(
         to right bottom,
-        rgba($color-secondary-light, 0.803),
+        rgba($color-primary-light, 0.803),
         rgba($color-primary-dark, 0.803)
       ),
       url(../img/hero.jpg);
